--- a/resources/public/css/koan.css
+++ b/resources/public/css/koan.css
@@ -1,16 +1,23 @@
+.logo {
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    vertical-align: middle;
+}
+
 #editor { 
-        margin: 0;
-        position: absolute;
-        top: 70px;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        width: 600px;
-        height: 600px;
+    margin: 0;
+    position: absolute;
+    top: 70px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 600px;
+    height: 600px;
 }
 
 button.run-koan {
-    margin-left: 150px;
+    margin-left: 25px;
     margin-right: 25px;
 }
 
